# senna-neuro

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  VERSION  conanfile.py  docker-compose.yml
.github/workflows/: ci.yml
configs/: default.yaml
configs/grafana/: dashboard-provider.yml  datasources.yml
configs/grafana/dashboards/: activity.json  empty-overview.json  performance.json  senna-activity.json  senna-network-health.json  senna-performance.json  senna-training.json  training.json
configs/grafana/provisioning/dashboards/: dashboards.yml
configs/prometheus/: prometheus.yml
configs/storage/: artifact_uploader.env
docker/: core.Dockerfile  trainer.Dockerfile  visualizer.Dockerfile
docs/acceptance/: README.md
docs/acceptance/scripts/: check_dod_metrics.py  check_e2e_smoke.py  check_inference_pipeline.py  check_ws_sparsity.py  run_acceptance.sh  run_e2e_smoke.sh
docs/adr/: 0001-versioning-and-changelog-policy.md  0002-architecture-baseline.md  0003-core-technology-stack.md  0004-simulation-model-and-time.md  0005-mvp-scope-boundaries.md  0006-observability-and-runtime-topology.md  0007-quality-gates-and-determinism.md  0008-template-usage-policy.md  0009-test-framework-and-ctest-discovery.md  0010-metrics-contract-and-export-path.md  0011-python-bindings-and-training-contract.md  0012-training-target-and-robustness-gates.md  0013-performance-and-cpp23-parallelism-policy.md  README.md
docs/step16-acceptance/: README.md
docs/step16-acceptance/scripts/: check_dod_metrics.py  check_inference_pipeline.py  check_ws_sparsity.py  run_acceptance.sh
infra/artifact-uploader/: Dockerfile  uploader.py
infra/simulator/: Dockerfile  simulator_server.py  test_simulator_server.py
python/: train.py
python/senna/: __init__.py  config.py  training.py
python/tests/: test_integration.py
scripts/: run_clang_tidy.py  setup_python_packages.py
src/: main.cpp
src/bindings/: python_module.cpp
src/core/: main.cpp
src/core/config/: runtime_config.cpp  runtime_config.hpp
src/core/decoding/: first_spike_decoder.cpp  first_spike_decoder.hpp
src/core/domain/: lattice.h  neuron.cpp  neuron.h  synapse.cpp  synapse.h  types.h
src/core/encoding/: rate_encoder.cpp  rate_encoder.hpp
src/core/engine/: event_queue.cpp  event_queue.h  network_builder.cpp  network_builder.h  simulation_engine.cpp  simulation_engine.h  time_manager.cpp  time_manager.h
src/core/interfaces/: grpc_server.cpp  grpc_server.hpp  ws_server.cpp  ws_server.hpp
src/core/io/: first_spike_decoder.cpp  first_spike_decoder.h  idecoder.h  iencoder.h  rate_encoder.cpp  rate_encoder.h
src/core/metrics/: metrics_collector.cpp  metrics_collector.h
src/core/network/: network_builder.cpp  network_builder.hpp  spike_loop.cpp  spike_loop.hpp
src/core/neural/: neuron.cpp  neuron.hpp  neuron_pool.cpp  neuron_pool.hpp
src/core/observability/: metrics_collector.cpp  metrics_collector.hpp  prometheus_exporter.cpp  prometheus_exporter.hpp
src/core/persistence/: epoch_artifact_pipeline.cpp  epoch_artifact_pipeline.h  hdf5_writer.cpp  hdf5_writer.h  state_serializer.cpp  state_serializer.h
src/core/plasticity/: homeostasis.cpp  homeostasis.h  homeostasis.hpp  iplasticity_rule.h  stdp.cpp  stdp.h  stdp.hpp  stdp_worker.cpp  stdp_worker.hpp  structural.cpp  structural.hpp  structural_plasticity.cpp  structural_plasticity.h  supervisor.cpp  supervisor.h
src/core/spatial/: lattice.cpp  lattice.hpp  neighbor_index.cpp  neighbor_index.hpp
src/core/synaptic/: synapse.cpp  synapse.hpp  synapse_index.cpp  synapse_index.hpp
src/core/temporal/: event_queue.cpp  event_queue.hpp  time_manager.cpp  time_manager.hpp
src/proto/: senna.proto
src/trainer/: config.cpp  config.hpp  main.cpp  mnist_loader.cpp  mnist_loader.hpp  training_pipeline.cpp  training_pipeline.hpp
tests/: test_event_queue.cpp  test_homeostasis.cpp  test_io.cpp  test_lattice.cpp  test_metrics.cpp  test_network_builder.cpp  test_neuron.cpp  test_persistence.cpp  test_stdp.cpp  test_structural_plasticity.cpp  test_supervisor.cpp  test_synapse.cpp  test_types.cpp
tests/decoding/: first_spike_decoder_test.cpp
tests/encoding/: rate_encoder_test.cpp
tests/integration/: lattice_smoke_test.cpp  network_smoke_test.cpp
tests/interfaces/: grpc_server_test.cpp  ws_server_test.cpp
tests/neural/: neuron_pool_test.cpp
tests/observability/: metrics_observability_test.cpp
tests/plasticity/: homeostasis_test.cpp  stdp_test.cpp  stdp_worker_test.cpp  structural_test.cpp
tests/spatial/: lattice_test.cpp  neighbor_index_test.cpp
tests/synaptic/: synapse_index_test.cpp
tests/temporal/: event_queue_test.cpp
tests/test_support/: require_value.h
tests/trainer/: config_test.cpp  mnist_loader_test.cpp  training_pipeline_test.cpp
visualizer/: app.js  index.html  package.json  server.js
